--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "setup" : "cp node_modules/benchmark/benchmark.js public/benchmark.js && cp node_modules/lodash/lodash.js public/lodash.js",
+    "build" : "vite build",
     "start": "npm run dev",
     "dev": "vite --open"
   },
